Temporary solution to white space issue in markdown text

--- a/src/sass/theme/_global.scss
+++ b/src/sass/theme/_global.scss
@@ -148,6 +148,10 @@ dd {
     font-weight: 600;
 }
 
+.markdown {
+    white-space: normal;
+}
+
 .markdown p {
     white-space: pre-wrap;
 }
